# spbsu-2019-gwbasic2c

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  lexer.l  main.cpp  parser.y  parser_helper.cpp  parser_helper.h  util.cpp  util.h
ast/: expression.cpp  expression.h  node.cpp  node.h  program.cpp  program.h
gw/core/: boolean.cpp  check_d.cpp  check_on_go.cpp  core.cpp  input.cpp  max_i.cpp  min_i.cpp  print.cpp  to_double_or_nan.cpp  vector.cpp  vector_erase.cpp
gw/logic/: abs_d.cpp  abs_f.cpp  and_.cpp  asc.cpp  atn_d.cpp  atn_f.cpp  cint_d.cpp  cint_f.cpp  cos_d.cpp  cos_f.cpp  end.cpp  equal_d.cpp  equal_f.cpp  equal_i.cpp  equal_s.cpp  eqv_.cpp  exp_d.cpp  exp_f.cpp  fdiv_d.cpp  fdiv_f.cpp  fix_d.cpp  fix_f.cpp  geq_d.cpp  geq_f.cpp  geq_i.cpp  geq_s.cpp  greater_d.cpp  greater_f.cpp  greater_i.cpp  greater_s.cpp  hex_d.cpp  hex_f.cpp  imp_.cpp  input_chars.cpp  instr.cpp  int_d.cpp  int_f.cpp  len.cpp  leq_d.cpp  leq_f.cpp  (+60 more)
gw_logic/: abs_d.c  abs_d.cpp  abs_f.c  abs_f.cpp  and_.c  and_.cpp  asc.c  asc.cpp  atn_d.c  atn_d.cpp  atn_f.c  atn_f.cpp  cdbl.c  chr.c  chr.cpp  cint_d.c  cint_d.cpp  cint_f.c  cint_f.cpp  cos_d.c  cos_d.cpp  cos_f.c  cos_f.cpp  csng_d.c  csng_f.c  end.c  end.cpp  equal_d.c  equal_d.cpp  equal_f.c  equal_f.cpp  equal_i.c  equal_i.cpp  equal_s.c  equal_s.cpp  eqv_.c  eqv_.cpp  exp_d.c  exp_d.cpp  exp_f.c  (+168 more)
gw_logic/core/: bool.c  check_d.c  check_f.c  check_f.cpp  core.c  core.cpp  input.cpp  max_i.c  min_i.c  print.cpp  string.c  to_string.cpp  vector.cpp
gw_logic_parser/: lexer.l  main.cpp  main.h  parser.y  util.cpp  util.h
